# not-your-nonnas-nonograms

./: CMakeLists.txt  README.md  board.h  cols.h  main.cpp  welcome.cpp
files/maps/: patterns.json
src/: CMakeLists.txt  board.cpp  cols.cpp  resources.cpp  resources.h  rows.cpp  rows.h  tile.cpp  tile.h  welcome.h
